--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,6 @@
     <string name="review_">review</string>
     <string name="review_a_">reviews</string>
     <string name="reviews_">reviews</string>
+    <string name="company_letter2">You can check the prices and departure dates with our managers.</string>
+    <string name="company_letter3">Best regards, StarGalaxy Company!</string>
 </resources>
