--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="review_">отзыв</string>
     <string name="review_a_">отзыва</string>
     <string name="reviews_">отзывов</string>
+    <string name="company_letter2">С ценами и датами вылета можно ознакомиться у менеджеров.</string>
+    <string name="company_letter3">С наилучшими пожеланиями,  Компания “StarGalaxy”!</string>
 </resources>
